[metadata]
name = import-profiler
version = attr: import_profiler.__version__
url = https://github.com/effigies/import-profiler
author = Christopher J. Markiewicz
author_email = effigies@gmail.com
description = Profile incremental imports in Python
license = GPLv3
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Software Development

[options]
packages = find:
py_modules = import_profiler
install_requires = psutil

[options.entry_points]
console_scripts =
    import-profiler = import_profiler:main
