[metadata]
name = improf
version = attr: improf.__version__
url = https://github.com/effigies/improf
author = Christopher J. Markiewicz
author_email = effigies@gmail.com
description = The import profiler
license = GPLv3
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Software Development

[options]
packages = find:
py_modules = improf
install_requires = psutil

[options.entry_points]
console_scripts =
    improf = improf:main
